# aws-storage-optimizer

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMMAND_SPEC.md  IMPLEMENTATION_PLAN.md  SCAFFOLD.md
scripts/: install-zsh-aliases.sh
src/aws_storage_optimizer/: actions.py  aws_clients.py  cli.py  config.py  estimation.py  models.py  recommender.py  reporting.py  utils.py
src/aws_storage_optimizer/analyzers/: __init__.py  ebs.py  rds.py  s3.py
tests/: test_aws_clients.py  test_cli_analyze.py  test_cli_execute.py  test_config.py  test_exclusions.py  test_integration_sandbox.py  test_recommender.py  test_reporting.py  test_utils.py
