[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-storage-optimizer"
version = "0.1.0"
description = "CLI utility to analyze AWS storage cost optimization opportunities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.36.0",
  "click>=8.1.7",
  "rich>=13.9.4"
]

[project.optional-dependencies]
dev = [
  "pylint>=3.3.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
aws-storage-optimizer = "aws_storage_optimizer.cli:cli"
aso = "aws_storage_optimizer.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.pylint.main]
py-version = "3.10"
ignore = [".venv"]
ignore-paths = ["^artifacts/"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-locals",
  "no-value-for-parameter"
]

[tool.pylint.format]
max-line-length = 120
